[workspace]
resolver = "2"
members = ["windivert-sniffer", "fake-sniffer", "test-client"]

[package]
name = "lost-metrics-sniffer"
version = "0.1.0" 
authors = ["averageeucplayer"]
edition = "2024"
rust-version = "1.85"

[dependencies]
anyhow = "1.0.96"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
abi_stable = "0.11.3"
bincode = "2.0.1"

[dev-dependencies]
mockall = "0.13.1"