[workspace]
resolver = "2"
members = [
    "windivert-sniffer",
    "fake-client-server",
    "console-runner"
]

[package]
name = "lost-metrics-sniffer"
version = "0.1.0" 
authors = ["averageeucplayer"]
edition = "2024"
rust-version = "1.85"

[dependencies]
anyhow = "1.0.96"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
abi_stable = "0.11.3"
bincode = "2.0.1"
octocrate = { version = "2.2.0", features = ["repos", "git", "pulls", "issues", "users", "search"] }
reqwest = { version = "0.12.14", features = ["json"] }
log = "0.4.22"
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "signal", "time", "sync", "macros"] }
interprocess = { version = "2.2.3", features = ["tokio"] }

[dev-dependencies]
mockall = "0.13.1"