[package]
name = "console-runner"
version = "0.1.0"
authors = ["averageeucplayer"]
edition = "2024"
rust-version = "1.85"

[dependencies]
log = "0.4"
simple_logger = "5.0.0"
anyhow = "1.0.96"
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "signal", "time", "sync", "macros"] }
abi_stable = "0.11.3"
bincode = "2.0.1"
clap = { version = "4.5.31", features = ["derive"] }
rand = "0.9.0"
lost-metrics-sniffer = { path= ".." }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1.12"