[package]
name = "fake-tcp-sniffer"
version = "0.1.0"
authors = ["averageeucplayer"]
edition = "2024"
rust-version = "1.85"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
anyhow = "1.0.96"
log = "0.4"
abi_stable = "0.11.3"
lost-metrics-sniffer = { path= ".." }
rand = "0.9.0"
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "signal", "time", "sync", "macros"] }
bincode = "2.0.1"
simple_logger = "5.0.0"

[dev-dependencies]
mockall = "0.13.1"