[package]
name = "windivert-sniffer"
version = "0.1.0"
authors = ["averageeucplayer"]
edition = "2024"
rust-version = "1.85"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.96"
log = "0.4"
abi_stable = "0.11.3"
windivert = "0.6.0"
lost-metrics-sniffer = { path= ".." }

[dev-dependencies]
mockall = "0.13.1"