[package]
name = "windivert-sniffer"
version = "0.1.0"
authors = ["averageeucplayer"]
edition = "2024"
rust-version = "1.85"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.96"
log = "0.4"
abi_stable = "0.11.3"
windivert = "0.6.0"
etherparse = "0.17"
byteorder = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
simple_logger = "5.0.0"
lost-metrics-sniffer = { path= ".." }

[dev-dependencies]
mockall = "0.13.1"